k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-tracker
  namespace: finance-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-tracker
  template:
    metadata:
      labels:
        app: finance-tracker
    spec:
      containers:
        - name: finance-tracker
          image: finance-tracker:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 256Mi
            limits:
              memory: 512Mi
              ephemeral-storage: 1Gi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
      automountServiceAccountToken: false
